Fixed searchbox being squished
fixed the searchbox being squished on newest version of chrome (not sure
when the bug happened).

--- a/ProBuilds/web/setviewer.css
+++ b/ProBuilds/web/setviewer.css
@@ -350,6 +350,7 @@ article.tabs section h2
     flex-direction:row;
     flex-wrap:nowrap;
     justify-content:flex-start;
+    min-height: 20px;
 }
 
 #setsfilter {
